- fix sidebar overflow appearance

--- a/set_calc/mainapp/src/components/Main/Main.less
+++ b/set_calc/mainapp/src/components/Main/Main.less
@@ -11,6 +11,7 @@
     flex: 0 0 50px;
     background: @blue;
     transition: all 0.3s;
+    overflow-x: hidden;
     &:hover {
       flex: 0 0 300px;
     }
